# rust-server

./: Cargo.toml  README.org
adapter/: Cargo.toml
application/: Cargo.toml
domain/: Cargo.toml
entity/: Cargo.toml
infrastructure/: Cargo.toml
src/: main.rs
